appId: com.leonzym.plogkit
---
- extendedWaitUntil:
    visible:
      id: PXGGridLayout-Info
      index: 1
      enabled: true
    timeout: 90000
- tapOn:
    id: PXGGridLayout-Info
    index: 0
- tapOn:
    id: PXGGridLayout-Info
    index: 1
- assertVisible: ^Done$
- tapOn: ^Done$
